# dotnet-client

./: .gitignore  CMakeLists.txt  Infinispan.HotRod.sln  Jenkinsfile  License.rtf  License.txt  README.md  appveyor.yml  build.bat  build.ps1  build.sh  global.json  infinispan-dotnet-client-tag.sh  maven-settings.xml  readme.txt  todo.md  wix-bundle.cmake
.github/workflows/: cd-nupkg.yml  cd.yml  ci-nupkg.yml  ci.yml
Infinispan.DotNetClient/tests/: .gitignore  App.config  DotNetClientTest.csproj  GetOperationTest.cs  PingOperationTest.cs  PutIFAbsentOperationTest.cs  PutOperationTest.cs  RemoveOperationTest.cs
buildtools/: Infinispan.HotRod.Cpp-client.win7-x64.nuspec  build.fsx  helper_functions.fsx
client/: App.config  NLog.config  client.csproj  client.csproj.bak
client/Infinispan/DotNetClient/: BinaryVersionedValue.cs  Flag.cs  IBinaryVersionedValue.cs  IRemoteCache.cs  ISerializer.cs  IServerStatistics.cs  IVersionedValue.cs  RemoteCache.cs  RemoteCacheImpl.cs  RemoteCacheManager.cs  ServerStatisticsTypes.cs  VersionedOperationResponse.cs  VersionedValue.cs
client/Properties/: AssemblyInfo.cs
docs/licenses/: licenses.html  licenses.xml
documentation/: README.md  index.adoc
documentation/asciidoc/stories/: assembly_installing_configuring.adoc
documentation/asciidoc/titles/: dotnet_client.asciidoc  stories.adoc
documentation/asciidoc/topics/: proc_installing_client.adoc  ref_configuration_builder.adoc
examples/ReproducerForHRCPP485/: Program.cs  ReproducerForHRCPP485.csproj  ReproducerForHRCPP485.sln
examples/ReproducerForHRCPP485/Properties/: AssemblyInfo.cs
java_events/: pom.xml
java_tests/: pom.xml
lib/: readme.txt
nativeTestSuite/: AsyncTest.cs  BasicTypesProtoStreamMarshaller.cs  JBasicMarshaller.cs  QueryTest.cs  RemoteExecTest.cs  SSLTest.cs  nativeTestSuite.cs
nativeTestSuite/Properties/: AssemblyInfo.cs
nuget-example/: Program.cs  README.md  nuget-example.csproj
release/: NAnt.build.xml  build.bat  out.txt  tt.txt
release/files/: README.txt
release/sample/: Program.cs  StringSerializer.cs  sample.csproj
release/sample/Properties/: AssemblyInfo.cs
sample/: .gitignore
sample/InfinispanDotnetClientSample/: InfinispanDotnetClientSample.csproj  Program.cs  StringSerializer.cs
sample/InfinispanDotnetClientSample/Properties/: AssemblyInfo.cs
samples/Infinispan.HotRod.SimpleSample/: Infinispan.HotRod.SimpleSample.csproj  Program.cs
src/Infinispan.HotRod/: AdminFlag.cs  Counter.cs  CounterConfiguration.cs  CounterType.cs  DataFormat.cs  Flags.cs  IMetadataValue.cs  IRemoteCache.cs  IVersionedValue.cs  IdentityMarshaller.cs  Infinispan.HotRod.csproj  RemoteCacheManager.cs  RemoteCacheManagerAdmin.cs  RemoteCounterManager.cs  ServerStatistics.cs  Storage.cs  TimeUnit.cs
src/Infinispan.HotRod/Config/: AbstractConfigurationChildBuilder.cs  AuthenticationCallback.cs  AuthenticationConfiguration.cs  ClusterConfigurationBuilder.cs  Configuration.cs  ConfigurationBuilder.cs  ConfigurationChildBuilder.cs  ConnectionPoolConfigurationBuilder.cs  NearCacheConfigurationBuilder.cs  SecurityConfiguration.cs  SecurityConfigurationBuilder.cs  ServerConfiguration.cs  ServerConfigurationBuilder.cs  SslConfiguration.cs  SslConfigurationBuilder.cs
src/Infinispan.HotRod/Event/: ClientEvent.cs  ClientEventListenerCallback.cs  ClientListener.cs  ContinuousQueryListener.cs  CounterEvent.cs  CounterListener.cs
src/Infinispan.HotRod/Exceptions/: CounterLowerBoundException.cs  HotRodClientException.cs  (+9 more)
swig/: CMakeLists.txt  hotrod_arch.i  hotrod_exception.i  hotrod_wrap.vcxproj  hotrodcs.i  std_set.i
swig/include/swig/: DotNetClientListener.h  Queue.h  RemoteCache.h  RemoteCacheBase.h  RemoteCacheManager.h
templates/: AssemblyInfo.cs.in  Doxyfile.in  README.txt.in  hotrodcs-tests.proj.in  hotrodcs.proj.in  nativeTestSuite.csproj.in  nunit.bat.in  run_ikvm.bat.in  run_ispn.bat.in  wix-bundle.xml.in  wix.xml.in
test/: README-prebuilt.md
test/Infinispan.HotRod.Tests/: AsyncOperationsTest.cs  AuthDigestTest.cs  AuthPlainTest.cs  AuthenticationTest.cs  AuthenticationTestSuite.cs  AuthenticationTestsBase.cs  AuthorizationDigestTest.cs  AuthorizationPlainTest.cs  AuthorizationTester.cs  BaseAuthorizationTest.cs  BasicTypesProtostreamMarshaller.cs  ClusterTestSuite.cs  CompatibilityMarshallerTest.cs  CompatibilityModeTestBase.cs  CompatibilityModeTestSuite.cs  ConfigurationBuilderTest.cs  ContinuousQueryTest.cs  CounterTest.cs  CounterWithListenerTest.cs  DefaultCacheForceReturnValueTest.cs  DefaultCacheTest.cs  DefaultTestSuite.cs  DefaultTestSuiteBase.cs  EventListener.cs  Infinispan.HotRod.Tests.csproj  JBasicMarshaller.cs  NearCacheEvictionTest.cs  NearCacheFailoverTest.cs  NearCacheMultipleClientsTest.cs  NearCacheStaleReadsTest.cs  RemoteCacheAdminTest.cs  RemoteEventTest.cs  RemoteFulltextQueryTest.cs  RemoteQueryTest.cs  RemoteQueryTestBase.cs  RemoteQueryTestSuite.cs  RemoteQueryUtils.cs  RemoteTaskExecTest.cs  SSLTest.cs  SecurityTestSuite.cs  (+5 more)
test/resources/: application-roles.properties  clustered-indexing.xml  clustered-sasl-cs.xml  clustered-xsite1.xml  clustered.xml  infinispan-sasl.xml  infinispan-ssl.xml  infinispan.xml  keystore_server_sni1.pem  macbeth.txt  standalone-hotrod-ssl.xml  standalone.xml  wordCountStream.js
tests/: App.config  BulkGetOperationTest.cs  ClearOperationTest.cs  ClientConfigTest.cs  ContainsKeyOperationTest.cs  ForceReturnValueTest.cs  GetOperationTest.cs  GetWithVersionOperationTest.cs  HotRodStatisticsTest.cs  MultipleServerAbstractTest.cs  MultipleServerPutTest.cs  NLog.config  NamedCacheTest.cs  PingOperationTest.cs  PutIFAbsentOperationTest.cs  PutOperationTest.cs  RemoveIfUnmodifiedOperationTest.cs  RemoveOperationTest.cs  RemoveWithVersionOperationTest.cs  ReplaceIfUnmodifiedOperationTest.cs  ReplaceOperationTest.cs  ReplaceWithVersionOperationTest.cs  SingleServerAbstractTest.cs  StatsOperationTest.cs  tests.csproj
tests/Properties/: AssemblyInfo.cs
tests/Test References/: dotnetclient.accessor
tests/etc/: copytestconfigs.bat  preparetestenv.bat
tests/testconfigs/: local-named-cache.xml
(+260 files in other folders)
